# componentize-go

./: .gitattributes  .gitignore  Cargo.toml  README.md  go.mod  main.go
.github/actions/setup-componentize-go/: action.yml
.github/workflows/: pr.yaml  release.yml
docs/: 404.html  cm.html  cmd.html  index.html  wit.html  wit_async.html  wit_runtime.html  wit_types.html  x.html
docs/wit-bindgen/: index.html  wit_async.html  wit_runtime.html  wit_types.html
examples/sdk/: README.md
examples/sdk/component/: Makefile  README.md  go.mod  main.go
examples/sdk/pkg/: Makefile  componentize-go.toml  go.mod
examples/sdk/pkg/bindings/exports/export_wasi_cli_run/: wit_bindings.go
examples/sdk/pkg/bindings/exports/wit_exports/: wit_exports.go
examples/sdk/pkg/bindings/imports/wasi_cli_environment/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_exit/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_stderr/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_stdin/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_stdout/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_terminal_input/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_terminal_output/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_terminal_stderr/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_terminal_stdin/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_terminal_stdout/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_types/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_clocks_monotonic_clock/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_clocks_system_clock/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_clocks_types/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_filesystem_preopens/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_filesystem_types/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_random_insecure/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_random_insecure_seed/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_random_random/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_sockets_ip_name_lookup/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_sockets_types/: wit_bindings.go
examples/sdk/pkg/cli/: cli.go
examples/sdk/pkg/sockets/: sockets.go
examples/sdk/pkg/wit/: world.wit
examples/wasip1/: README.md  go.mod
examples/wasip2/: Makefile  README.md
examples/wasip2/export_wasi_http_incoming_handler/: handler.go
examples/wasip2/wit/: world.wit
examples/wasip3/: Makefile  README.md
examples/wasip3/export_wasi_http_handler/: handler.go
examples/wasip3/wit/: world.wit
src/: bindings.rs  cmd_bindings.rs  cmd_build.rs  cmd_test.rs  command.rs  common.rs  componentize.rs  lib.rs  utils.rs  wasi_snapshot_preview1.reactor.wasm
tests/: Cargo.toml
tests/src/: lib.rs
wit_async/: wit_async.go
wit_types/: wit_future.go  wit_stream.go
