[package]
name = "componentize-go"
authors = ["Andrew Steurer <me@asteurer.com>"]
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "componentize_go"
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["./tests"]

[workspace.dependencies]
anyhow = "1.0.102"
bzip2 = "0.6.1"
once_cell = "1.21.3"
reqwest = { version = "0.13.1", features = ["blocking"] }
tar = "0.4"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.lints.clippy]
# The default set of lints in Clippy is viewed as "too noisy" right now so
# they're all turned off by default. Selective lints are then enabled below as
# necessary.
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
unnecessary_to_owned = 'warn'
manual_strip = 'warn'
uninlined_format_args = 'warn'
unnecessary_mut_passed = 'warn'
unnecessary_fallible_conversions = 'warn'
unnecessary_cast = 'warn'
allow_attributes_without_reason = 'warn'

[dependencies]
anyhow = { workspace = true }
bzip2 = { workspace = true }
reqwest = { workspace = true }
tar = { workspace = true }
clap = { version = "4.5.60", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
# TODO: Switch to release 0.55.0 when it's available:
wit-bindgen-go = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "6a13b247" }
wit-component = "0.245.1"
wit-parser = "0.245.1"
which = "8.0.2"
dirs = "6.0.0"
