[package]
name = "componentize-go"
authors = ["Andrew Steurer <me@asteurer.com>"]
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "componentize_go"
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["./tests"]

[workspace.dependencies]
anyhow = "1.0.102"
bzip2 = "0.6.1"
once_cell = "1.21.3"
reqwest = { version = "0.13.3", features = ["blocking"] }
tar = "0.4.46"

[workspace.package]
version = "0.3.4"
edition = "2024"

[workspace.lints.clippy]
# The default set of lints in Clippy is viewed as "too noisy" right now so
# they're all turned off by default. Selective lints are then enabled below as
# necessary.
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
unnecessary_to_owned = 'warn'
manual_strip = 'warn'
uninlined_format_args = 'warn'
unnecessary_mut_passed = 'warn'
unnecessary_fallible_conversions = 'warn'
unnecessary_cast = 'warn'
allow_attributes_without_reason = 'warn'

[dependencies]
anyhow = { workspace = true }
bzip2 = { workspace = true }
reqwest = { workspace = true }
tar = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
wit-bindgen-go = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "95995ce0abdfec2609d44d04537fe5378c1349c0" }
wit-component = "0.249.0"
wit-parser = "0.249.0"
which = "8.0.2"
dirs = "6.0.0"
