[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bzip2 = "0.6.1"
once_cell = "1.21.3"
reqwest = { version = "0.13.1", features = ["blocking"] }
tar = "0.4"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
