[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
componentize-go = { path = ".." }
anyhow = { workspace = true }
bzip2 = { workspace = true }
once_cell = "1.21.3"
reqwest = { workspace = true }
tar = { workspace = true }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
